compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_lambda_variant_renderer.snap
---
source: tests/fixtures.rs
assertion_line: 1232
expression: transcript
---
fixture: tests/fixtures/programs/basic/lambda_variant_renderer.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
tok:fn
tok:answer
tok:int
stderr:
<empty>
