compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_let_initializer_outer_scope.snap
---
source: tests/fixtures.rs
assertion_line: 4782
expression: transcript
---
fixture: tests/fixtures/programs/basic/let_initializer_outer_scope.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
42
stderr:
<empty>
