compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_list_operations.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/list_operations.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
0
2
20
alpha
stderr:
<empty>
