compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_list_tail_irrefutable_pattern.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/programs/basic/list_tail_irrefutable_pattern.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
6
stderr:
<empty>
