compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_match_literals.snap
---
source: tests/fixtures.rs
assertion_line: 729
expression: transcript
---
fixture: tests/fixtures/programs/basic/match_literals.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
one
1
42
stderr:
<empty>
