compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_nested_block_comments.snap
---
source: tests/fixtures.rs
assertion_line: 5799
expression: transcript
---
fixture: tests/fixtures/programs/basic/nested_block_comments.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
nested-ok
stderr:
<empty>
