compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_record_constructor_pattern_nested.snap
---
source: tests/fixtures.rs
assertion_line: 1597
expression: transcript
---
fixture: tests/fixtures/programs/basic/record_constructor_pattern_nested.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
ok:7;fallback
stderr:
<empty>
