compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_record_field_shorthand.snap
---
source: tests/fixtures.rs
assertion_line: 6056
expression: transcript
---
fixture: tests/fixtures/programs/basic/record_field_shorthand.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
input
42
stderr:
<empty>
