compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_recursive_factorial.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/recursive_factorial.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
120
stderr:
<empty>
