compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_runtime_ordering.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/runtime_ordering.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
true
true
false
stderr:
<empty>
