compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_runtime_values.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/runtime_values.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
((riot, 42), [1, 2, 3], Point { x: 10, y: 20 })
stderr:
<empty>
