compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_sequenced_main.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/sequenced_main.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
first
second
third
stderr:
<empty>
